--- a/package.json
+++ b/package.json
@@ -18,15 +18,16 @@
   },
   "keywords": [
     "fp",
-    "functionalprogramming",
-    "javascript",
-    "ramda"
+    "functional-javascript",
+    "functional-programming",
+    "javascript"
   ],
   "dependencies": {
     "accounting": "^0.4.1",
     "data.task": "^3.1.1"
   },
   "devDependencies": {
+    "@std/esm": "^0.18.0",
     "coveralls": "latest",
     "git-dirty": "latest",
     "husky": "latest",
@@ -35,6 +36,9 @@
     "prettier-standard": "latest",
     "standard": "latest",
     "standard-markdown": "latest"
+  },
+  "@std/esm": {
+    "esm": "js"
   },
   "engines": {
     "node": ">= 6"
