--- a/package.json
+++ b/package.json
@@ -24,7 +24,11 @@
   ],
   "dependencies": {
     "accounting": "^0.4.1",
-    "data.task": "^3.1.1"
+    "data.either": "^1.5.1",
+    "data.task": "^3.1.1",
+    "immutable": "^3.8.2",
+    "immutable-ext": "^1.1.2",
+    "request": "^2.83.0"
   },
   "devDependencies": {
     "@std/esm": "^0.18.0",
